# RustTemplate

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
crates/sub_projects/: Cargo.toml
