[package]
name = "sub_projects"
publish = false
version = "0.0.0"
authors = ["Shihua Liang <sxhxliang@gmail.com>"]
description = "..."
repository = "https://github.com/sxhxliang/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
